added javax.xml.bind dependency in project.clj